<resources>
    <string name="app_name">Juju</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Exercise</string>
    <string name="fcm_message">Nova Mensagem</string>

    <!-- region home sign -->
    <string name="welcome_text">Sou um aplicativo que vai ajudar você\na realizar exercícios pélvicos!</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Cadastrar</string>
    <!-- end region -->

    <!-- region sign in -->
    <string name="dont_have_account">Ainda não possui uma conta? Criar agora</string>
    <string name="email_info_text">E-mail</string>
    <string name="pwd_info_text">Senha</string>
    <string name="email_hint_text">Qual seu e-mail?</string>
    <string name="pwd_hint_text">Qual sua senha?</string>
    <string name="success_logged">Logado com sucesso?</string>
    <!-- end region -->

    <!-- region sign up -->
    <string name="birthday_info_text">Data de nascimento</string>
    <string name="name_info_text">Nome</string>
    <string name="birthday_hint_text">Qual seu nome?</string>
    <string name="name_hint_text">Quando você nasceu?</string>
    <string name="pwd_new_hint_text">Crie um senha</string>
    <string name="go_back">voltar</string>
    <!-- end region -->

    <!-- action bar -->
    <string name="calendar">Diário</string>
    <string name="star">Estrela</string>
    <string name="exercise">Treino</string>
    <string name="video">Vídeo</string>
    <string name="profile">Perfil</string>
    <string name="empty_menu_title" />
    <string name="levels_menu">Níveis</string>
    <!-- end region -->

    <!-- level exercise -->
    <string name="level_easy">Fácil</string>
    <string name="level_medium">Médio</string>
    <string name="level_hard">Difícil</string>
    <!-- end region -->

    <string name="level">Nível %s</string>

    <!-- main -->
    <string name="start">Começar</string>
    <string name="exercise_text">Aqui é onde você pratica o exercício\nde relaxamento e contração do períneo.</string>
    <string name="soft_exercise">Treino Lento</string>
    <string name="hard_exercise">Treino Rápido</string>
    <!-- -->

    <string name="today">Hoje</string>
    <string name="daily_meta">Meta Diária</string>
    <string name="contract">CONTRAIR</string>
    <string name="relaxe">RELAXAR</string>
    <string name="series">Séries: %d</string>

    <string name="completed">Exercício Finalizado</string>
    <string name="exercise_level">Nível do Exercício</string>

    <string name="invalid_email">E-mail Inválido</string>
    <string name="invalid_password">Senha Inválida</string>
    <string name="obey">Campo obrigatório</string>
    <string name="invalid_field">Campo Inválido</string>

    <string name="urine_loss">Perda de urina</string>
    <string name="details">Detalhes</string>
    <string name="series_title_tab">Séries</string>

    <string name="attendance">Acompanhamento</string>

    <string name="logout">Sair da conta</string>
    <string name="change_pwd">Alterar senha</string>
    <string name="profile_photo">Tirar foto</string>
    <string name="settings">Configurações</string>
    <string name="nothing_registered">Não existe exercício ou perda de urina cadastrada para o dia %s.</string>

    <string name="error_message">Não foi possível carregar os seus dados no momento.</string>
    <string name="define_new_pwd">Definir nova senha</string>
    <string name="change_pwd_description">Sua senha deve conter no mínimo 6 caracteres</string>
    <string name="update">Atualizar</string>
    <string name="congrats">Parabéns!\nVocê completou um exercício diário!</string>

    <string name="series_tab_title">Séries</string>
    <string name="urine_tab_title">Urina</string>

    <string name="pwd">Senha</string>
    <string name="pwd_actual">Senha Atual</string>
    <string name="confirm_pwd">Confirmar Senha</string>
    <string name="error_message_pwd_does_not_match">As senhas não coincidem.</string>
    <string name="update_success">Senha atualiza!</string>

    <string name="cancel">Voltar</string>
    <string name="confirm">Confirmar</string>

    <string name="slow_training">Treino Lento</string>
    <string name="fast_training">Treino Rápido</string>

    <string name="urine_loss_qtd">Perdas: %d</string>

    <string name="urine_loss_dialog_title">Informe a quantidade de urina que perdeu</string>
    <string name="low_loss">Perda leve</string>
    <string name="medium_loss">Perda moderada</string>
    <string name="big_loss">Perda grande</string>


    <string name="easy"><b>%d</b> séries <b>Nível Fácil</b></string>
    <string name="medium"><b>%d</b> séries <b>Nível Médio</b></string>
    <string name="hard"><b>%d</b> séries <b>Nível Difícil</b></string>

    <string name="urine_loss_text_item">Perda de urina %s</string>
    <string name="urine_loss_low"><b>leve</b></string>
    <string name="urine_loss_medium"><b>moderada</b></string>
    <string name="urine_loss_big"><b>grande</b></string>

    <string name="of">de</string>

    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="jun">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="add_urine_loss">Adicionar perda de urina</string>

    <string name="repetitions">%d Repetições</string>

    <string name="material_calendar_monday">S</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">Q</string>
    <string name="material_calendar_thursday">Q</string>
    <string name="material_calendar_friday">S</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_day_abbreviations_array">
        <item>@string/material_calendar_sunday</item>
        <item>@string/material_calendar_monday</item>
        <item>@string/material_calendar_tuesday</item>
        <item>@string/material_calendar_wednesday</item>
        <item>@string/material_calendar_thursday</item>
        <item>@string/material_calendar_friday</item>
        <item>@string/material_calendar_saturday</item>
    </array>

    <array name="material_calendar_months_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </array>

    <string name="material_calendar_today_button">Hoje</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="take_pic">Tirar Foto</string>
    <string name="save">Salvar</string>

</resources>
