<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.Activity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"
        style="@style/AppTheme.Button.Medium.Light"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_margin_from_text_input"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_header"
        style="@style/AppTheme.Text.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_bottom"
        style="@style/AppTheme.Text.Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <br.com.jujuhealth.widget.CustomTextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_text_margin"
        android:layout_marginRight="@dimen/common_text_margin"
        android:inputType="textEmailAddress"
        app:text_info="@string/email_info_text"
        app:hint_text="@string/email_hint_text"
        android:layout_marginBottom="@dimen/common_text_margin"
        app:layout_constraintBottom_toTopOf="@id/txt_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <br.com.jujuhealth.widget.CustomTextView
        android:id="@+id/txt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_text_margin"
        android:layout_marginRight="@dimen/common_text_margin"
        app:text_info="@string/pwd_info_text"
        android:inputType="textPassword"
        app:hint_text="@string/pwd_hint_text"
        app:drawable_resource_right="@drawable/ic_remove_red_eye"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <include layout="@layout/image_background" />

</androidx.constraintlayout.widget.ConstraintLayout>