<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_medium_margin">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/urine_loss_dialog_title"
            android:textSize="@dimen/font_medium_big_button"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_medium_margin"
            app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_loss"
                android:theme="@style/AppTheme.RadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium_loss"
                android:theme="@style/AppTheme.RadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/big_loss"
                android:theme="@style/AppTheme.RadioButton" />

    </RadioGroup>


    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_big_big_margin"
            android:layout_marginTop="@dimen/common_medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/confirm" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>