<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme.Activity">

        <include layout="@layout/image_background" />

        <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:indeterminateDrawable="@drawable/progress_bar"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/text_bottom"
                app:layout_constraintTop_toBottomOf="@id/sign_in" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            style="@style/AppTheme.Button.Medium.Light"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_margin_from_text_input"
            android:layout_marginBottom="@dimen/common_medium_margin"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_header"
            style="@style/AppTheme.Text.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_bottom"
            style="@style/AppTheme.Text.Bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <br.com.jujuhealth.widget.CustomTextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_text_margin"
            android:layout_marginTop="@dimen/common_medium_margin"
            android:layout_marginRight="@dimen/common_text_margin"
            android:layout_marginBottom="@dimen/common_text_margin"
            android:inputType="textEmailAddress"
            app:hint_text="@string/email_hint_text"
            app:layout_constraintBottom_toTopOf="@id/txt_pwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:text_info="@string/email_info_text" />

        <br.com.jujuhealth.widget.CustomTextView
            android:id="@+id/txt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_text_margin"
            android:layout_marginTop="@dimen/common_medium_margin"
            android:layout_marginRight="@dimen/common_text_margin"
            app:drawable_resource_right="@drawable/ic_remove_red_eye"
            app:hint_text="@string/pwd_hint_text"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:text_info="@string/pwd_info_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
