<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/define_new_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/define_new_pwd"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/font_medium_big_button"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_start" />

    <TextView
            android:id="@+id/define_new_pwd_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_pwd_description"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/font_medium_button"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/define_new_pwd" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwd_actual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/darkGray"
            android:layout_marginBottom="@dimen/common_small_margin"
            app:layout_constraintBottom_toTopOf="@id/pwd"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pwd_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box_underline_activated_pwd"
                android:hint="@string/pwd_actual"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="@dimen/common_small_margin"
                android:paddingBottom="@dimen/common_small_margin"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/darkGray"
            android:layout_marginBottom="@dimen/common_small_margin"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_middle"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box_underline_activated_pwd"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="@dimen/common_small_margin"
                android:paddingBottom="@dimen/common_small_margin"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/darkGray"
            android:layout_marginTop="@dimen/common_small_margin"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_middle">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/text_box_underline_activated_pwd"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:paddingTop="@dimen/common_small_margin"
                android:paddingBottom="@dimen/common_small_margin"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update"
            style="@style/AppTheme.Button.Medium.Dark"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_margin_from_text_input"
            android:text="@string/update"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="@dimen/loading_animation_width"
            android:layout_height="@dimen/loading_animation_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            android:visibility="gone"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true" />


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>